--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:db-init/schema.sql
   output:
     ansi:
       enabled: always
