테스트 코드를 사용하는 경우 Test Profile 를 사용할 수 있도록 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,11 @@ spring:
     url: r2dbc:pool:mariadb://localhost:3306/sample
     username: user
     password: 1234
+
+---
+spring:
+  config:
+    activate:
+      on-profile: text
+  r2dbc:
+    url: r2dbc:pool:h2:mem://localhost/sample
