--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,10 +30,10 @@ spring:
     activate:
       on-profile: local
   r2dbc:
-    url: r2dbc:pool:h2:mem://localhost/sample
+    url: r2dbc:pool:h2:file:///./sample
   sql:
     init:
-      mode: embedded
+      mode: always
 ---
 spring:
   config:
