--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,6 +64,10 @@ logging:
     org.springframework.r2dbc.core: off
     org.springframework.r2dbc.connection: off
 ---
+spring:
+  config:
+    activate:
+      on-profile: prod
 
 server:
   error:
