FEAT: Error Handler - DefaultErrorAttributes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,9 +21,11 @@ logging:
     me.snowlight: debug
     org.springframework.r2dbc.core: debug
     org.springframework.r2dbc.connection: debug
+    org.springframework.boot.autoconfigure.web.reactive.error.AbstractErrorWebExceptionHandler: off
+    org.springframework.http.HttpLogging: off
+    org.springframework.web.HttpLogging: off
   pattern:
-#    console: "%d{HH:mm:ss.SSS}|%highlight(%-5level)|%X{txid:-}|%green(%t)|%logger|%blue(\\(%F:%L\\))|%msg%n"
-    console: "%d{HH:mm:ss.SSS}|%highlight(%-5level)|%X{txid:-}|%green(%t)|%blue(\\(%F:%L\\))|%msg%n"
+    console: "%d{HH:mm:ss.SSS}|%highlight(%-5level)|%X{txid:-}|%green(%t)|%logger|%blue(\\(%F:%L\\))|%msg%n"
 ---
 spring:
   config:
