FEAT: R2DBC native sql

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,10 +36,11 @@ spring:
     activate:
       on-profile: local
   r2dbc:
-    url: r2dbc:pool:h2:file:///./sample
+    url: r2dbc:pool:h2:mem://localhost/sample
   sql:
     init:
       mode: always
+      data-locations: classpath:db-init/test.sql
 server:
   error:
     include-exception: true
