FEAT Reactive Redis Study Code - 알고리즘

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,6 +57,9 @@ spring:
   sql:
     init:
       mode: embedded
+logging:
+  pattern:
+    console: "%d{HH:mm:ss.SSS}|%highlight(%-5level)|%X{txid:-}|%green(%t)|%blue(\\(%F:%L\\))|%msg%n"
 ---
 spring:
   config:
